--- a/workflows/main.yml
+++ b/workflows/main.yml
@@ -7,9 +7,9 @@ on:
     branches: [ "main" ]
 
 env:
-  REGISTRY: ghcr.io/YOUR_USERNAME/YOUR_REPO
+  REGISTRY: ghcr.io/dhanipsd/dhani-deploy
   GH_REGISTRY: ghcr.io
-  IMAGE_NAME: your-app-name
+  IMAGE_NAME: node-app
   DOCKER_BUILDKIT: 1
 
 jobs:
